--- a/nug4/ParticleNavigation/CMakeLists.txt
+++ b/nug4/ParticleNavigation/CMakeLists.txt
@@ -15,9 +15,8 @@ art_make( NO_PLUGINS
 			${MF_UTILITIES}
         		cetlib
 			cetlib_except
-			${ROOT_BASIC_LIB_LIST}
+			${ROOT_LIBRARIES}
         )
 
 install_headers()
 install_fhicl()
-install_source()
