Modified the MagneticFieldService to be able to overrided it with custom service

--- a/nug4/CMakeLists.txt
+++ b/nug4/CMakeLists.txt
@@ -1,5 +1,5 @@
-
 add_subdirectory (G4Base)
 add_subdirectory (MagneticField)
+add_subdirectory (MagneticFieldServices)
 add_subdirectory (ParticleNavigation)
 
