--- a/nug4/ParticleNavigation/CMakeLists.txt
+++ b/nug4/ParticleNavigation/CMakeLists.txt
@@ -15,8 +15,9 @@ art_make( NO_PLUGINS
 			${MF_UTILITIES}
         		cetlib
 			cetlib_except
-			${ROOT_LIBRARIES}
+			${ROOT_BASIC_LIB_LIST}
         )
 
 install_headers()
 install_fhicl()
+install_source()
