--- a/nug4/MagneticFieldServices/CMakeLists.txt
+++ b/nug4/MagneticFieldServices/CMakeLists.txt
@@ -1,8 +1,8 @@
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )
 
 simple_plugin( MagneticFieldServiceStandard "service"
-            ${MF_MESSAGELOGGER}
-            ${MF_UTILITIES}
+            messagefacility::MFMessageLogger
+            messagefacility::headers
             cetlib_except
             nug4_MagneticField
             ${CLHEP}
