--- a/nug4/MagneticFieldServices/CMakeLists.txt
+++ b/nug4/MagneticFieldServices/CMakeLists.txt
@@ -1,6 +1,7 @@
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )
 
 simple_plugin( MagneticFieldServiceStandard "service"
+            LIBRARIES
             messagefacility::MFMessageLogger
             messagefacility::headers
             cetlib_except
