--- a/nug4/ParticleNavigation/CMakeLists.txt
+++ b/nug4/ParticleNavigation/CMakeLists.txt
@@ -4,7 +4,7 @@ include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )
 
 art_make( NO_PLUGINS
           LIB_LIBRARIES nusimdata_SimulationBase
-                        art::Framwork_Core
+                        art::Framework_Core
 			art::Framework_Principal
 			art::Framework_Services_Registry
 			art_Persistency_Common
