--- a/nug4/G4Base/CMakeLists.txt
+++ b/nug4/G4Base/CMakeLists.txt
@@ -2,35 +2,34 @@
 art_make( LIB_LIBRARIES nusimdata_SimulationBase
                         nug4_MagneticFieldServices_MagneticFieldServiceStandard_service
                         nug4_MagneticField
-			canvas
-                        ${ART_FRAMEWORK_SERVICES_REGISTRY}
-                        ${MF_MESSAGELOGGER}
-                        ${MF_UTILITIES}
-                        ${FHICLCPP}
+			                  canvas
+                        ART_FRAMEWORK_SERVICES_REGISTRY
+                        MF_MESSAGELOGGER
+                        FHICLCPP
                         cetlib
                         cetlib_except
-                        ${G4FR}
-                        ${G4GMOCREN}
-                        ${G4RAYTRACER}
-                        ${G4TREE}
-                        ${G4VRML}
-                        ${G4EVENT}
-                        ${G4GEOMETRY}
-                        ${G4GLOBAL}
-                        ${G4INTERCOMS}
-                        ${G4MATERIALS}
-                        ${G4MODELING}
-                        ${G4PARTICLES}
-                        ${G4PERSISTENCY}
-                        ${G4PHYSICSLISTS}
-                        ${G4PROCESSES}
-                        ${G4READOUT}
-                        ${G4RUN}
-                        ${G4TRACKING}
-                        ${G4VISHEPREP}
-                        ${G4VIS_MANAGEMENT}
-                        ${XERCESC}
-                        ${CLHEP}
+                        G4FR
+                        G4GMOCREN
+                        G4RAYTRACER
+                        G4TREE
+                        G4VRML
+                        G4EVENT
+                        G4GEOMETRY
+                        G4GLOBAL
+                        G4INTERCOMS
+                        G4MATERIALS
+                        G4MODELING
+                        G4PARTICLES
+                        G4PERSISTENCY
+                        G4PHYSICSLISTS
+                        G4PROCESSES
+                        G4READOUT
+                        G4RUN
+                        G4TRACKING
+                        G4VISHEPREP
+                        G4VIS_MANAGEMENT
+                        XERCESC
+                        CLHEP
                         )
 
 install_headers()
