--- a/nug4/MagneticFieldServices/CMakeLists.txt
+++ b/nug4/MagneticFieldServices/CMakeLists.txt
@@ -5,6 +5,7 @@ simple_plugin( MagneticFieldServiceStandard "service"
             ${MF_UTILITIES}
             cetlib_except
             nug4_MagneticField
+            G4GEOMETRY
             ${CLHEP}
             ${ROOT_BASIC_LIB_LIST}
             ${ROOT_GEOM} )
