--- a/nug4/MagneticField/CMakeLists.txt
+++ b/nug4/MagneticField/CMakeLists.txt
@@ -2,6 +2,7 @@ include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )
 
 art_make(NO_PLUGINS
           LIB_LIBRARIES
+          G4GEOMETRY
           ${MF_MESSAGELOGGER}
           ${MF_UTILITIES}
           canvas
