--- a/nug4/MagneticFieldServices/CMakeLists.txt
+++ b/nug4/MagneticFieldServices/CMakeLists.txt
@@ -1,9 +1,9 @@
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )
 
 simple_plugin( MagneticFieldServiceStandard "service"
-            ${MF_MESSAGELOGGER}
+            messagefacility::MF_MessageLogger
             ${MF_UTILITIES}
-            cetlib_except
+            cetlib_except::cetlib_except
             nug4_MagneticField
             G4GEOMETRY
             ${CLHEP}
