structural changes for new subdir/library and pythia8 dependence

--- a/nug4/CMakeLists.txt
+++ b/nug4/CMakeLists.txt
@@ -2,4 +2,4 @@ add_subdirectory (G4Base)
 add_subdirectory (MagneticFieldServices)
 add_subdirectory (MagneticField)
 add_subdirectory (ParticleNavigation)
-
+add_subdirectory (AdditionalG4Physics)
