--- a/nug4/MagneticFieldServices/CMakeLists.txt
+++ b/nug4/MagneticFieldServices/CMakeLists.txt
@@ -2,13 +2,13 @@ include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )
 
 simple_plugin( MagneticFieldServiceStandard "service"
             messagefacility::MF_MessageLogger
-            ${MF_UTILITIES}
+            
             cetlib_except::cetlib_except
             nug4_MagneticField
             G4GEOMETRY
-            ${CLHEP}
+            CLHEP
             ${ROOT_BASIC_LIB_LIST}
-            ${ROOT_GEOM} )
+            ROOT::Geom )
 
 install_headers()
 install_fhicl()
