--- a/nug4/ParticleNavigation/CMakeLists.txt
+++ b/nug4/ParticleNavigation/CMakeLists.txt
@@ -3,7 +3,7 @@
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )
 
 art_make( NO_PLUGINS
-          LIB_LIBRARIES nusimdata_SimulationBase
+          LIB_LIBRARIES nusimdata::SimulationBase
                         art::Framework_Core
 			art::Framework_Principal
 			art::Framework_Services_Registry
@@ -12,7 +12,7 @@ art_make( NO_PLUGINS
 			art::Utilities
 			canvas::canvas
 			messagefacility::MF_MessageLogger
-			${MF_UTILITIES}
+			
         		cetlib::cetlib
 			cetlib_except::cetlib_except
 			${ROOT_BASIC_LIB_LIST}
