--- a/nug4/CMakeLists.txt
+++ b/nug4/CMakeLists.txt
@@ -3,4 +3,5 @@ add_subdirectory (G4Base)
 add_subdirectory (MagneticFieldServices)
 add_subdirectory (MagneticField)
 add_subdirectory (ParticleNavigation)
+add_subdirectory (AdditionalG4Physics)
 
