--- a/nug4/MagneticFieldServices/CMakeLists.txt
+++ b/nug4/MagneticFieldServices/CMakeLists.txt
@@ -1,13 +1,13 @@
-include_directories( ${CMAKE_CURRENT_SOURCE_DIR} ) ### MIGRATE-ACTION-RECOMMENDED: use target_link_directories() with target semantics
+##include_directories( ${CMAKE_CURRENT_SOURCE_DIR} ) ### MIGRATE-ACTION-RECOMMENDED: use target_link_directories() with target semantics
 
-simple_plugin( MagneticFieldServiceStandard "service"
+cet_build_plugin( MagneticFieldServiceStandard art::service
+      LIBRARIES
             messagefacility::MF_MessageLogger
-            
             cetlib_except::cetlib_except
-            nug4_MagneticField
+            nug4::MagneticField
             G4GEOMETRY
-            CLHEP
-            ${ROOT_BASIC_LIB_LIST}
+            CLHEP::CLHEP
+            ROOT::Core
             ROOT::Geom )
 
 install_headers()
