--- a/nug4/ParticleNavigation/CMakeLists.txt
+++ b/nug4/ParticleNavigation/CMakeLists.txt
@@ -1,9 +1,10 @@
 
 # for classes_def.xml!!
-include_directories( ${CMAKE_CURRENT_SOURCE_DIR} ) ### MIGRATE-ACTION-RECOMMENDED: use target_link_directories() with target semantics
+##include_directories( ${CMAKE_CURRENT_SOURCE_DIR} ) ### MIGRATE-ACTION-RECOMMENDED: use target_link_directories() with target semantics
 
-art_make( NO_PLUGINS ### MIGRATE-ACTION-RECOMMENDED: use art_make_library(), art_dictionary(), simple_plugin() with explicit source lists
-          LIB_LIBRARIES nusimdata::SimulationBase
+art_make_library( SOURCE EmEveIdCalculator.cxx  EveIdCalculator.cxx
+                         ParticleHistory.cxx  ParticleList.cxx
+          LIBRARIES nusimdata::SimulationBase
                         art::Framework_Core
 			art::Framework_Principal
 			art::Framework_Services_Registry
@@ -12,10 +13,9 @@ art_make( NO_PLUGINS ### MIGRATE-ACTION-RECOMMENDED: use art_make_library(), art
 			art::Utilities
 			canvas::canvas
 			messagefacility::MF_MessageLogger
-			
         		cetlib::cetlib
 			cetlib_except::cetlib_except
-			${ROOT_BASIC_LIB_LIST}
+                        ROOT::Core
         )
 
 install_headers()
