--- a/nug4/G4Base/CMakeLists.txt
+++ b/nug4/G4Base/CMakeLists.txt
@@ -8,27 +8,27 @@ art_make( LIB_LIBRARIES nusimdata::SimulationBase ### MIGRATE-ACTION-RECOMMENDED
                         FHICLCPP
                         cetlib::cetlib
                         cetlib_except::cetlib_except
-                        G4FR
-                        G4GMOCREN
-                        G4RAYTRACER
-                        G4TREE
-                        G4VRML
-                        G4EVENT
-                        G4GEOMETRY
-                        G4GLOBAL
-                        G4INTERCOMS
-                        G4MATERIALS
-                        G4MODELING
-                        G4PARTICLES
-                        G4PERSISTENCY
-                        G4PHYSICSLISTS
-                        G4PROCESSES
-                        G4READOUT
-                        G4RUN
-                        G4TRACKING
-                        G4VISHEPREP
-                        G4VIS_MANAGEMENT
-                        XERCESC
+                        Geant4::G4FR
+                        Geant4::G4GMocren
+                        Geant4::G4RayTracer
+                        Geant4::G4Tree
+                        Geant4::G4VRML
+                        Geant4::G4event
+                        Geant4::G4geometry
+                        Geant4::G4global
+                        Geant4::G4intercoms
+                        Geant4::G4materials.so
+                        Geant4::G4modeling.so
+                        Geant4::G4particles.so
+                        Geant4::G4persistency.so
+                        Geant4::G4physicslists.so
+                        Geant4::G4processes
+                        Geant4::G4readout
+                        Geant4::G4run
+                        Geant4::G4tracking
+                        Geant4::G4visHepRep
+                        Geant4::G4vis_management
+                        XercesC::XercesC
                         CLHEP::CLHEP
                         )
 
