Adjustments to library link lines.

--- a/nug4/AdditionalG4Physics/CMakeLists.txt
+++ b/nug4/AdditionalG4Physics/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 ##find_package(Pythia8 REQUIRED)
 find_library( PYTHIA8 NAMES pythia8 PATHS ENV PYTHIA8_LIB NO_DEFAULT_PATH ) ### MIGRATE-ACTION-RECOMMENDED: use of ENV ... may be UPS-dependent ### MIGRATE-ACTION-RECOMMENDED: use cet_find_package() with target semantics for linking
 include_directories($ENV{PYTHIA8_INC})
@@ -11,10 +10,10 @@ art_make_library(SOURCE Py8CharmDecayerPhysics.cc Py8Decayer.cc
                         Geant4::G4geometry
                         Geant4::G4global
                         Geant4::G4intercoms
-                        Geant4::G4materials.so
-                        Geant4::G4modeling.so
-                        Geant4::G4particles.so
-                        Geant4::G4physicslists.so
+                        Geant4::G4materials
+                        Geant4::G4modeling
+                        Geant4::G4particles
+                        Geant4::G4physicslists
                         Geant4::G4processes
                         Geant4::G4run
                         Geant4::G4tracking
