--- a/nug4/G4Base/CMakeLists.txt
+++ b/nug4/G4Base/CMakeLists.txt
@@ -1,13 +1,10 @@
-
 art_make( LIB_LIBRARIES nusimdata::SimulationBase ### MIGRATE-ACTION-RECOMMENDED: use art_make_library(), art_dictionary(), simple_plugin() with explicit source lists
                         nug4::MagneticFieldServices_MagneticFieldServiceStandard_service
                         nug4::MagneticField
-			                  canvas::canvas
-                        ART_FRAMEWORK_SERVICES_REGISTRY
-                        MF_MESSAGELOGGER
-                        FHICLCPP
-                        cetlib::cetlib
-                        cetlib_except::cetlib_except
+                        art::Framework_Services_Registry
+                        canvas::canvas
+                        messagefacility::MF_MessageLogger
+                        fhiclcpp::fhiclcpp
                         Geant4::G4FR
                         Geant4::G4GMocren
                         Geant4::G4RayTracer
@@ -17,11 +14,11 @@ art_make( LIB_LIBRARIES nusimdata::SimulationBase ### MIGRATE-ACTION-RECOMMENDED
                         Geant4::G4geometry
                         Geant4::G4global
                         Geant4::G4intercoms
-                        Geant4::G4materials.so
-                        Geant4::G4modeling.so
-                        Geant4::G4particles.so
-                        Geant4::G4persistency.so
-                        Geant4::G4physicslists.so
+                        Geant4::G4materials
+                        Geant4::G4modeling
+                        Geant4::G4particles
+                        Geant4::G4persistency
+                        Geant4::G4physicslists
                         Geant4::G4processes
                         Geant4::G4readout
                         Geant4::G4run
