remove spurios suffix

--- a/nug4/AdditionalG4Physics/CMakeLists.txt
+++ b/nug4/AdditionalG4Physics/CMakeLists.txt
@@ -11,10 +11,10 @@ art_make_library(SOURCE Py8CharmDecayerPhysics.cc Py8Decayer.cc
                         Geant4::G4geometry
                         Geant4::G4global
                         Geant4::G4intercoms
-                        Geant4::G4materials.so
-                        Geant4::G4modeling.so
-                        Geant4::G4particles.so
-                        Geant4::G4physicslists.so
+                        Geant4::G4materials
+                        Geant4::G4modeling
+                        Geant4::G4particles
+                        Geant4::G4physicslists
                         Geant4::G4processes
                         Geant4::G4run
                         Geant4::G4tracking
