--- a/nug4/MagneticField/CMakeLists.txt
+++ b/nug4/MagneticField/CMakeLists.txt
@@ -1,6 +1,4 @@
-##include_directories( ${CMAKE_CURRENT_SOURCE_DIR} ) ### MIGRATE-ACTION-RECOMMENDED: use target_link_directories() with target semantics
 
-#art_make(NO_PLUGINS ### MIGRATE-ACTION-RECOMMENDED: use art_make_library(), art_dictionary(), simple_plugin() with explicit source lists
 art_make_library( SOURCE MagneticFieldStandard.cxx
           LIBRARIES
           Geant4::G4geometry
@@ -12,6 +10,7 @@ art_make_library( SOURCE MagneticFieldStandard.cxx
           CLHEP::CLHEP
           ROOT::Core
           ROOT::Geom
+          ROOT::Physics
           PUBLIC
          )
          
