--- a/nug4/MagneticFieldServices/CMakeLists.txt
+++ b/nug4/MagneticFieldServices/CMakeLists.txt
@@ -1,4 +1,5 @@
-cet_make_library(INTERFACE SOURCE MagneticFieldService.h
+cet_make_library(LIBRARY_NAME MagneticFieldService
+  INTERFACE SOURCE MagneticFieldService.h
   LIBRARIES INTERFACE
   art_plugin_types::serviceDeclaration
   nug4::MagneticField
@@ -7,7 +8,7 @@ cet_make_library(INTERFACE SOURCE MagneticFieldService.h
 cet_build_plugin(MagneticFieldServiceStandard art::service
   LIBRARIES PRIVATE
   nug4::MagneticFieldStandard
-  nug4::MagneticFieldServices
+  nug4::MagneticFieldService
   art::Framework_Services_Registry
   art::Framework_Principal
   fhiclcpp::fhiclcpp
